package github.com.desfate.libbuild;

/**
 * 需要配置的一些基本信息
 */
public class TestConfig {

    // 腾讯云 licence
    public final static String LICENCE_URL = "http://license.vod2.myqcloud.com/license/v1/fbc229653a09ab6ec9e0d2f9d30db945/TXLiveSDK.licence";
    public final static String LICENCE_KEY = "7ebeb7a8f2cd241daf84cfa2e8a66191";

    // 推流地址
    public final static String PUSH_URL = "rtmp://117780.livepush.myqcloud.com/live/test?txSecret=98874d7bcf05f77a1b341e07e050b30a&txTime=5FBE0368";

    public final static String PLAY_URL =
            "rtmp://desfate.cn/live/1400425586_test";

}
