@startuml

title __LIBBUILD.APP's Class Diagram__\n

  namespace github.com.desfate.libbuild {
    class github.com.desfate.libbuild.BuildConfig {
    }
  }
  

  namespace github.com.desfate.libbuild {
    class github.com.desfate.libbuild.CameraDemoActivity {
    }
  }
  

  namespace github.com.desfate.libbuild {
    class github.com.desfate.libbuild.DataPushActivity {
    }
  }
  

  namespace github.com.desfate.libbuild {
    class github.com.desfate.libbuild.MainActivity {
    }
  }
  

  namespace github.com.desfate.libbuild {
    class github.com.desfate.libbuild.PlayActivity {
    }
  }
  

  namespace github.com.desfate.libbuild {
    class github.com.desfate.libbuild.TCApplication {
    }
  }
  

  namespace github.com.desfate.libbuild {
    class github.com.desfate.libbuild.TXMainActivity {
    }
  }
  

  namespace github.com.desfate.libbuild {
    class github.com.desfate.libbuild.TestConfig {
    }
  }
  

  namespace github.com.desfate.libbuild {
    class github.com.desfate.libbuild.TexturePushActivity {
    }
  }
  

  github.com.desfate.libbuild.CameraDemoActivity -up-|> androidx.appcompat.app.AppCompatActivity
  github.com.desfate.libbuild.CameraDemoActivity o-- github.com.desfate.livekit.camera.interfaces.CameraErrorCallBack : cameraErrorCallBack
  github.com.desfate.libbuild.DataPushActivity -up-|> androidx.appcompat.app.AppCompatActivity
  github.com.desfate.libbuild.DataPushActivity o-- github.com.desfate.livekit.live.LiveConfig : liveConfig
  github.com.desfate.libbuild.DataPushActivity o-- github.com.desfate.livekit.ui.DataLivePushView : anchor_push_view
  github.com.desfate.libbuild.MainActivity .up.|> android.view.View.OnClickListener
  github.com.desfate.libbuild.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  github.com.desfate.libbuild.PlayActivity -up-|> androidx.appcompat.app.AppCompatActivity
  github.com.desfate.libbuild.PlayActivity o-- github.com.desfate.livekit.ui.LivePlayView : anchor_play_view
  github.com.desfate.libbuild.TCApplication -up-|> android.app.Application
  github.com.desfate.libbuild.TXMainActivity .up.|> android.view.View.OnClickListener
  github.com.desfate.libbuild.TXMainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  github.com.desfate.libbuild.TexturePushActivity -up-|> androidx.appcompat.app.AppCompatActivity
  github.com.desfate.libbuild.TexturePushActivity o-- github.com.desfate.livekit.live.LiveConfig : liveConfig
  github.com.desfate.libbuild.TexturePushActivity o-- github.com.desfate.livekit.live.LivePushControl : control


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
